# strx

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  mkdocs.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  ruff.toml
.github/workflows/: compliance.yml  publish.yml  test.yml
docs/: index.md  packages.md  sad.md
docs/guide/: headstart.md  troubleshooting.md
strx/: __init__.py  _constant.py  _constarnt.py  compose.py  convert.py  method.py  normalize.py  transform.py
tests/: test_convert.py  test_detect.py  test_enum.py  test_normalize.py  test_parse.py  test_syntax.py  test_transform.py
